[package]
name = "sqs_replay"
version = "0.1.0"
authors = ["Tom Scott <tom.scott1@sainsburys.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
clap = "2.33.0"
tokio = { version = "0.2.11", features = ["full"] }
rusoto_core = "0.42.0"
rusoto_sqs = "0.42.0"
colored = "1.9"